--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </li>
     </ul>
     </div>
-    <script type="text/javascript" SRC="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
 
