--- a/index.html
+++ b/index.html
@@ -13,23 +13,46 @@
   <header class="header">
     <div class="header-block">
       <img class="header-block__img" src="./eisenhower-matrix.jpg" alt="image of matrix Eisenhower">
-      <a class="header-block__button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+      <a class="header-block__button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
   </header>
     
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
-        <div class="task-row-wrapper"><input id="new-task" class="task" type="text"><button>Add</button>
-        </div>
-      </p>
+  <div class="centered-main-page-element">
+    <p id="topSectionForAddingElementToList">
+      <label for="new-task">Add Item</label>
+      <div class="task-row-wrapper">
+        <input id="new-task" class="task" type="text">
+        <button>Add</button>
+      </div>
+        </p>
     <h3>Todo</h3>
     <ul id="incompleteTasks">
-    <li><input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-    <li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg"></button></li>
-    </ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
-    </li>
+      <li>
+        <input type="checkbox">
+        <label class="task">Pay Bills</label>
+        <input type="text" class="task">
+        <button class="edit">Edit</button>
+        <button class="delete"><img src="./remove.svg"></button>
+      </li>
+      <li class="editMode">
+        <input type="checkbox">
+        <label class="task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task">
+        <button class="edit">Save</button>
+        <button class="delete"><img src="./remove.svg"></button>
+      </li>
     </ul>
-    </div>
+    <h3>Completed</h3>
+    <ul id="completed-tasks">
+      <li>
+        <input type="checkbox" checked>
+        <label class="task">See the Doctor</label>
+        <input type="text" class="task">
+        <button class="edit">Edit</button>
+        <button class="delete"><img src="./remove.svg"></button>
+      </li>
+    </ul>
+  </div>
     <script src="app.js"></script>
 </body>
 </html>
