--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
-        </p>
+    </p>
     <h3>Todo</h3>
     <ul id="incompleteTasks">
       <li>
@@ -39,7 +39,7 @@
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete"><img src="./remove.svg" alt=""></button>
       </li>
     </ul>
     <h3>Completed</h3>
