--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 
 <body>
   <header class="header">
-    <div class="header-block">
-      <img class="header-block__img" src="./eisenhower-matrix.jpg" alt="image of matrix Eisenhower">
-      <a class="header-block__button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
+    <img class="header-img" src="./eisenhower-matrix.jpg" alt="image of matrix Eisenhower">
+    <a class="header-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
     
-  <div class="centered-main-page-element">
+  <main class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
@@ -52,7 +50,7 @@
         <button class="delete"><img src="./remove.svg"></button>
       </li>
     </ul>
-  </div>
+  </main>
     <script src="app.js"></script>
 </body>
 </html>
