--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete">
+          <img src="./remove.svg" alt="">
+        </button>
       </li>
     </ul>
   </main>
