--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete">
+          <img src="./remove.svg" alt="">
+        </button>
       </li>
       <li class="editMode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg" alt=""></button>
+        <button class="delete">
+          <img src="./remove.svg" alt="">
+        </button>
       </li>
     </ul>
     <h3>Completed</h3>
