--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <a class="header-button" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
     
-  <main class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+  <main class="main-element">
+    <p class="add-element-to-list">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <h3 class="sections-titile">Todo</h3>
+    <ul class="list" id="incompleteTasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -44,8 +44,8 @@
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
+    <h3 class="sections-titile">Completed</h3>
+    <ul class="list" id="completed-tasks">
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
